--- a/main.css
+++ b/main.css
@@ -206,6 +206,9 @@ transform: rotate(-45deg);
 	-webkit-text-fill-color: transparent;
 	padding: 1rem;
 	user-select: none;
+	animation: type 3s steps(13);
+	overflow: hidden;
+	white-space: nowrap;
 
 }
 
@@ -568,4 +571,13 @@ left: -5.9rem;
 	 	right: 2rem;
 	 }
 
+}
+
+@keyframes type{
+	0%{
+		width: 0ch;
+	}
+	100%{
+		width: 13ch;
+	}
 }
