--- a/main.css
+++ b/main.css
@@ -277,7 +277,7 @@ font-weight: 300;
 	transition: color 650ms;
 }
 
-.fa-instagram:hover{
+.fa-camera:hover{
 	color: #ff5050;
 }
 .fa-github-square:hover{
